media/tautulli/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: plex
  labels:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
      app.kubernetes.io/instance: tautulli
  serviceName: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
        app.kubernetes.io/instance: tautulli
    spec:
      containers:
        - name: gatekeeper
          image: quay.io/keycloak/keycloak-gatekeeper:10.0.0
          imagePullPolicy: IfNotPresent
          args:
          - --listen=:3000
          - --discovery-url=https://sso.srueg.ch/auth/realms/lab
          - --client-id=tautulli
          - --upstream-url=http://localhost:8181
          - --resources
          - "uri=/*|roles=tautulli:login"
          - --enable-encrypted-token
          - --force-encrypted-cookie
          - --enable-logging
          - --enable-refresh-tokens
          ports:
          - name: http
            containerPort: 3000
          livenessProbe:
            httpGet:
              path: /oauth/health
              port: http
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /oauth/health
              port: http
        - name: tautulli
          image: docker.io/linuxserver/tautulli:v2.6.0-ls14
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
            - name: plex-logs
              mountPath: /logs
              subPath: Library/Application Support/Plex Media Server/Logs
          ports:
            - name: tautulli
              containerPort: 8181
          readinessProbe:
            httpGet:
              path: /welcome
              port: tautulli
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
        - name: plex-logs
          persistentVolumeClaim:
            claimName: plex-config
