media/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: plex
  labels:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
